--- a/web/templates/response/form.html.eex
+++ b/web/templates/response/form.html.eex
@@ -36,7 +36,7 @@
   </div>
 
   <div class="form-group">
-    <%= label f, :helpful, "Was Kevin helpful to you while working on the warm ups?", class: "control-label" %>
+    <%= label f, :helpful, "Can Kevin be more helpful on warmups during class?", class: "control-label" %>
     <%= text_input f, :helpful, class: "form-control" %>
   </div>
 
@@ -46,6 +46,6 @@
   </div>
 
   <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
+    <%= submit "Submit Answers", class: "btn btn-primary" %>
   </div>
 <% end %>
