--- a/web/templates/response/form.html.eex
+++ b/web/templates/response/form.html.eex
@@ -12,37 +12,37 @@
 
   <div class="form-group">
     <%= label f, :week1, "What did you think of week 1?", class: "control-label" %>
-    <%= text_input f, :week1, class: "form-control" %>
+    <%= textarea f, :week1, class: "form-control", rows: 5 %>
   </div>
 
   <div class="form-group">
     <%= label f, :read, "Did you do the reading from week 1?", class: "control-label" %>
-    <%= text_input f, :read, class: "form-control" %>
+    <%= textarea f, :read, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= label f, :video, "Did you watch the videos from week 1?", class: "control-label" %>
-    <%= text_input f, :video, class: "form-control" %>
+    <%= textarea f, :video, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= label f, :exercise, "Did you do the exercises in the week 1 todo list?", class: "control-label" %>
-    <%= text_input f, :exercise, class: "form-control" %>
+    <%= textarea f, :exercise, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= label f, :warmup, "What did you think of the warm ups we did in class on Wednesday?", class: "control-label" %>
-    <%= text_input f, :warmup, class: "form-control" %>
+    <%= textarea f, :warmup, class: "form-control", rows: 5 %>
   </div>
 
   <div class="form-group">
     <%= label f, :helpful, "Can Kevin be more helpful on warmups during class?", class: "control-label" %>
-    <%= text_input f, :helpful, class: "form-control" %>
+    <%= textarea f, :helpful, class: "form-control", rows: 5 %>
   </div>
 
   <div class="form-group">
     <%= label f, :nervous, "What are you nervous about regarding this class?", class: "control-label" %>
-    <%= text_input f, :nervous, class: "form-control" %>
+    <%= textarea f, :nervous, class: "form-control", rows: 5 %>
   </div>
 
   <div class="form-group">
